# flavor_runtime

./: CMakeLists.txt  qbitstream.cpp  smallvector.cpp
include/: fbitstream.h  flavor.h  flavori.h  smallvector.h
